api/vmm: guest memory file in /machine-config
This will be used in splitting the snapshot in 2 files, one with
the guest memory contents and one with the remaining microVM
configurations.
