# api_server/src/request/machine_configuration.rs
@@ -19,12 +19,16 @@ impl GenerateHyperResponse for VmConfig {
         let cpu_template = self
             .cpu_template
             .map_or("Uninitialized".to_string(), |c| c.to_string());
+        let memfile = self
+            .memfile
+            .clone()
+            .unwrap_or_else(|| "Uninitialized".to_string());
 
         json_response(
             StatusCode::Ok,
             format!(
-                "{{ \"vcpu_count\": {:?}, \"mem_size_mib\": {:?},  \"ht_enabled\": {:?},  \"cpu_template\": {:?} }}",
-                vcpu_count, mem_size, ht_enabled, cpu_template
+                "{{ \"vcpu_count\": {:?}, \"mem_size_mib\": {:?},  \"ht_enabled\": {:?},  \"cpu_template\": {:?}, \"memfile\": {:?} }}",
+                vcpu_count, mem_size, ht_enabled, cpu_template, memfile
             ),
         )
     }
@@ -47,6 +51,7 @@ impl IntoParsedRequest for VmConfig {
                     && self.mem_size_mib.is_none()
                     && self.cpu_template.is_none()
                     && self.ht_enabled.is_none()
+                    && self.memfile.is_none()
                 {
                     return Err(String::from("Empty PATCH request."));
                 }
@@ -84,6 +89,7 @@ mod tests {
             mem_size_mib: Some(1024),
             ht_enabled: Some(true),
             cpu_template: Some(CpuFeaturesTemplate::T2),
+            memfile: None,
         };
         let (sender, receiver) = oneshot::channel();
         assert!(body
@@ -99,6 +105,7 @@ mod tests {
             mem_size_mib: None,
             ht_enabled: None,
             cpu_template: None,
+            memfile: None,
         };
         assert!(uninitialized
             .clone()
@@ -117,6 +124,7 @@ mod tests {
             mem_size_mib: Some(1024),
             ht_enabled: None,
             cpu_template: Some(CpuFeaturesTemplate::T2),
+            memfile: None,
         };
         match body.into_parsed_request(None, Method::Put) {
             Ok(_) => assert!(false),
