# api_server/src/request/mod.rs
@@ -164,7 +164,8 @@ mod tests {
             "vcpu_count": 1,
             "mem_size_mib": 128,
             "ht_enabled": false,
-            "cpu_template": "Uninitialized"
+            "cpu_template": "Uninitialized",
+            "memfile": "Uninitialized"
         }"#;
         let vm_config_json: serde_json::Value = serde_json::from_str(vm_config_json).unwrap();
         assert_eq!(get_body(hyper_resp).unwrap(), vm_config_json);
